--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -19,7 +19,7 @@
   </div>
 
   <div class="all-products">
-    {{#each newProduct}}
+    {{#each product}}
     <a href="/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
