--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -5,7 +5,11 @@
 <div class="flash-deal-board">
   <div class="title">
     <i class="fi fi-sr-flame"></i>
-    <a href="/all-products/flash-sale" class="main-title"><b>FLASH DEAL</b></a>
+    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
+      <a href="/all-products/flash-sale" class="main-title">
+        <b>FLASH DEAL</b>
+      </a>
+    </h1>
   </div>
   
   <div class="products">
@@ -33,7 +37,11 @@
 <div class="hot-products-board">
   <div class="title">
     <i class="fi fi-sr-flame"></i>
-    <a href="/all-products/hot" class="main-title"><b>SẢN PHẨM HOT</b></a>
+    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
+      <a href="/all-products/hot" class="main-title">
+        <b>SẢN PHẨM HOT</b>
+      </a>
+    </h1>
   </div>
   
   <div class="products">
@@ -60,7 +68,12 @@
 <div class="content-board">
   <div class="title">
     <i class="fi fi-sr-flame"></i>
-    <a href="/all-products" class="main-title"><b>TOÀN BỘ SẢN PHẨM</b></a>
+    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
+      <a href="/all-products" class="main-title">
+        <b>TOÀN BỘ SẢN PHẨM</b>
+      </a>
+    </h1>
+    
   </div>
 
   <div class="products">
@@ -87,7 +100,11 @@
 <div class="famous-brand-board">
   <div class="title">
     <i class="fi fi-sr-flame"></i>
-    <a href="/all-products/all-brands" class="main-title"><b>THƯƠNG HIỆU NỔI BẬT</b></a>
+    <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
+      <a href="/all-products/all-brands" class="main-title">
+        <b>THƯƠNG HIỆU NỔI BẬT</b>
+      </a>
+    </h1>
   </div>
 
   <div class="brands">
