--- a/src/public/css/user/userHeader.css
+++ b/src/public/css/user/userHeader.css
@@ -15,7 +15,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    img { width: 50px; }
+    img { width: 40px; height: 40px }
   };
   .menu {
     /* display: flex; */
