--- a/src/resource/views/admin/allOrders.hbs
+++ b/src/resource/views/admin/allOrders.hbs
@@ -25,7 +25,7 @@
       </thead>
 
       <tbody>
-        {{#each newOrder}}
+        {{#each order}}
         <tr>
           <td> {{addIndex @index 1}}      </td>
           <td> {{this._id}}               </td>
