--- a/src/resource/views/admin/allProducts.hbs
+++ b/src/resource/views/admin/allProducts.hbs
@@ -30,7 +30,7 @@
       </thead>
 
       <tbody>
-        {{#each newProduct}}
+        {{#each product}}
         <tr>
           <td style="width: 10%;">{{addIndex @index 1}}</td>
           <td style="width: 20%;">{{this.brand}}</td>
