--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -1,5 +1,6 @@
 <div class="store-logo">
   <a href="/home">
+    <p style="display: none;">logo</p>
     <img src="https://res.cloudinary.com/bunny-store/image/upload/v1731735805/web-img/logo_xkavlj.webp" alt="logo" loading="lazy"/>
   </a>
 
