--- a/src/resource/views/partials/userFooter.hbs
+++ b/src/resource/views/partials/userFooter.hbs
@@ -4,15 +4,9 @@
     Chào mừng  điểm đến chăm sóc cơ thể, giúp bạn tự tin tỏa sáng mỗi ngày.
   </p>
   <ul>
-    <li>
-      Chăm sóc da: Chúng tôi cung cấp đầy đủ các sản phẩm chăm sóc da như sữa rửa mặt, kem dưỡng ẩm, serum đặc trị, mặt nạ dưỡng da... Từ các thương hiệu nổi tiếng như The Ordinary, Obagi, Paula’s Choice, Vaseline... Các sản phẩm đều được chọn lọc kỹ lưỡng nhằm mang lại hiệu quả tối ưu cho từng loại da, từ da dầu, da khô đến da nhạy cảm.
-    </li>
-      <li>
-      Trang điểm: Bên cạnh sản phẩm dưỡng da, trang web của chúng tôi còn có các sản phẩm trang điểm hàng đầu như son môi, phấn phủ, kem nền, mascara từ các thương hiệu uy tín như Maybelline, 3CE, Apieu giúp bạn sở hữu lớp trang điểm tự nhiên, lâu trôi. 
-    </li>
-    <li>
-      Chăm sóc cơ thể: Các sản phẩm dưỡng thể từ thương hiệu Vaseline, Dove cung cấp độ ẩm cần thiết, giúp làn da mềm mại và mịn màng. Đặc biệt, các dòng dưỡng thể có chứa SPF giúp bảo vệ da trước tác động của ánh nắng mặt trời.
-    </li>
+    <li>Chăm sóc da: Chúng tôi cung cấp đầy đủ các sản phẩm chăm sóc da như sữa rửa mặt, kem dưỡng ẩm, serum đặc trị, mặt nạ dưỡng da... Từ các thương hiệu nổi tiếng như The Ordinary, Obagi, Paula’s Choice, Vaseline... Các sản phẩm đều được chọn lọc kỹ lưỡng nhằm mang lại hiệu quả tối ưu cho từng loại da, từ da dầu, da khô đến da nhạy cảm.</li>
+    <li>Trang điểm: Bên cạnh sản phẩm dưỡng da, trang web của chúng tôi còn có các sản phẩm trang điểm hàng đầu như son môi, phấn phủ, kem nền, mascara từ các thương hiệu uy tín như Maybelline, 3CE, Apieu giúp bạn sở hữu lớp trang điểm tự nhiên, lâu trôi.</li>
+    <li>Chăm sóc cơ thể: Các sản phẩm dưỡng thể từ thương hiệu Vaseline, Dove cung cấp độ ẩm cần thiết, giúp làn da mềm mại và mịn màng. Đặc biệt, các dòng dưỡng thể có chứa SPF giúp bảo vệ da trước tác động của ánh nắng mặt trời.</li>
   </ul>
   <p>
     <b>Cam kết chất lượng và chính sách ưu đãi</b>
@@ -28,110 +22,28 @@
     </ul>
   </p>
 
-  <a href="/all-products/skincare">
-    Skincare
-  </a>
+  <a href="/all-products/skincare">Skincare</a>
   <ul>
-      <li>
-        <a href="/all-products/skincare/xit-khoang">
-          Xịt khoáng
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/mat-na">
-          Mặt nạ
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/serum">
-          Serum
-      </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/bha">
-          BHA
-      </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/tay-da-chet">
-          Tẩy da chết
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/duong-da">
-          Dưỡng da
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/toner">
-          Toner
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/nuoc-tay-trang">
-          Nước tẩy trang
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/cham-mun">
-          Chấm mụn
-        </a>
-      </li>
-      
-      <li>
-        <a href="/all-products/skincare/kem-duong-am">
-          Kem dưỡng ẩm
-        </a>
-      </li>
-
-      <li>
-        <a href="/all-products/skincare/sua-rua-mat">
-          Sữa rửa mặt
-        </a>
-      </li>
+    <li><a href="/all-products/skincare/xit-khoang">Xịt khoáng</a></li>
+    <li><a href="/all-products/skincare/mat-na">Mặt nạ</a></li>
+    <li><a href="/all-products/skincare/serum">Serum</a></li>
+    <li><a href="/all-products/skincare/bha">BHA</a></li>
+    <li><a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a></li>
+    <li><a href="/all-products/skincare/duong-da">Dưỡng da</a></li>
+    <li><a href="/all-products/skincare/toner">Toner</a></li>
+    <li><a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a></li>
+    <li><a href="/all-products/skincare/cham-mun">Chấm mụn</a></li>
+    <li><a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a></li>
+    <li><a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a></li>
   </ul>
 
-  <a href="/all-products/makeup">
-    Makeup
-  </a>
+  <a href="/all-products/makeup">Makeup</a>
   <ul>
-    <li>
-      <a href="/all-products/makeup/phan-ma">
-        Phấn má
-      </a>
-    </li>
-    <li>
-      <a href="/all-products/makeup/mascara">
-        Mascara
-      </a>
-    </li>
-    <li>
-      <a href="/all-products/makeup/ke-mat">
-        Kẻ mắt
-      </a>
-    </li>
-    <li>
-      <a href="/all-products/makeup/kem-chong-nang">
-        Kem chống nắng
-      </a>
-    </li>
-    <li>
-      <a href="/all-products/makeup/che-khuyet-diem">
-        Che khuyết điểm
-      </a>
-    </li>
-    <li>
-      <a href="/all-products/makeup/son">
-        Son
-      </a>
-    </li>
+    <li><a href="/all-products/makeup/phan-ma">Phấn má</a></li>
+    <li><a href="/all-products/makeup/mascara">Mascara</a></li>
+    <li><a href="/all-products/makeup/ke-mat">Kẻ mắt</a></li>
+    <li><a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a></li>
+    <li><a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a></li>
+    <li><a href="/all-products/makeup/son">Son</a></li>
   </ul>
 </div>
