--- a/src/public/css/user/userHome.css
+++ b/src/public/css/user/userHome.css
@@ -1,11 +1,9 @@
 .flash-deal-board, .hot-products-board, .content-board {
+  width: 100%;
   overflow: hidden;
-  margin-top: 20px;
-  padding: 10px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
   .title {
     display: flex; 
     align-items: center; 
@@ -37,10 +35,6 @@
     }
   }
   .products {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    overflow-x: scroll;
-    box-sizing: content-box;
     scroll-behavior: smooth;
     align-items: center;
     gap: 10px;
@@ -49,8 +43,11 @@
     display: grid;
     grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
     scroll-snap-type: x mandatory;
+    overflow-x: scroll;
     max-width: 1300px;
-    img { width: 220px; aspect-ratio: 1 / 1 };
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    img { max-width: 100%; aspect-ratio: 1 / 1; };
     a, p { text-decoration: none; color: black};
     a {
       display: flex;
@@ -63,29 +60,29 @@
       padding: 5px 12px;
       scroll-snap-align: none start;
       border-radius: 10px;
+      #product-price {
+        background-color: #FFDFDF;
+        padding: 5px;
+        width: fit-content;
+        border-radius: 5px;
+        font-weight: bolder;
+      }
+      #product-details {
+        display: flex; 
+        height: 50px; 
+        text-overflow: ellipsis; 
+        overflow: hidden;
+        word-wrap: break-word;
+        font-size: 14px;
+      }
     };
     .product:hover {
-      border: 1.5px solid red;
+      border: 1.5px solid red; 
       border-radius: 10px;
       box-shadow: 1rem black;
       scale: 1.05;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
-  }
-  #product-price {
-    background-color: #FFDFDF;
-    padding: 5px;
-    width: fit-content;
-    border-radius: 5px;
-    font-weight: bolder;
-  }
-  #product-details {
-    display: flex; 
-    height: 50px; 
-    text-overflow: ellipsis; 
-    overflow: hidden;
-    word-wrap: break-word;
-    font-size: 14px;
   }
   .products::-webkit-scrollbar {
     display: none;
