--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -8,46 +8,16 @@
   </div>
   
   <div class="admin-button">
-    <a href="/admin" class="sidebar-button" id="home-page">
-      <i class="fi fi-br-home"></i>
-      <p>Trang chủ</p>
-    </a>
-    <a href="/admin/all-customers" class="sidebar-button" id="customers">
-      <i class="fi fi-rr-users"></i>
-      <p>Khách hàng</p>
-    </a>
-    <a href="/admin/all-orders" class="sidebar-button" id="orders">
-      <i class="fi fi-rr-piggy-bank"></i>
-      <p>Đơn Hàng</p>
-    </a>
-    <a href="/admin/all-stores" class="sidebar-button" id="stores">
-      <i class="fi fi-rr-store-alt"></i>
-      <p>Cửa hàng (Đang làm)</p>
-    </a>
-    <a href="/admin/all-stores" class="sidebar-button" id="employees">
-      <i class="fi fi-rr-users"></i>
-      <p>Nhân sự (Đang làm)</p>
-    </a>
-    <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products">
-      <i class="fi fi-rr-box-open"></i>
-      <p>Sản Phẩm</p>
-    </a>
-    <a href="/admin/all-brands" class="sidebar-button" id="total-brands">
-      <i class="fi fi-rr-box-open"></i>
-      <p>Đối tác (Đang làm)</p>
-    </a>
-    <a href="/admin/trash" class="sidebar-button" id="trash">
-      <i class="fi fi-br-trash"></i>
-      <p>Kho</p>
-    </a>
-    <a class="sidebar-button" id="update-profile">
-      <i class="fi fi-br-circle-user"></i>
-      <p>Thông Tin Cá Nhân</p>
-    </a>
-    <a href="/authentication/sign-in" class="sidebar-button" id="log-out">
-      <i class="fi fi-br-exit"></i>
-      <p>Đăng Xuất</p>
-    </a>
+    <a href="/admin" class="sidebar-button" id="home-page"><i class="fi fi-br-home"></i><p>Trang chủ</p></a>
+    <a href="/admin/all-customers" class="sidebar-button" id="customers"><i class="fi fi-rr-users"></i><p>Khách hàng</p></a>
+    <a href="/admin/all-orders" class="sidebar-button" id="orders"><i class="fi fi-rr-piggy-bank"></i><p>Đơn Hàng</p></a>
+    <a href="/admin/all-stores" class="sidebar-button" id="stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng (Đang làm)</p></a>
+    <a href="/admin/all-stores" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự (Đang làm)</p></a>
+    <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
+    <a href="/admin/all-brands" class="sidebar-button" id="total-brands"><i class="fi fi-rr-box-open"></i><p>Đối tác (Đang làm)</p></a>
+    <a href="/admin/trash" class="sidebar-button" id="trash"><i class="fi fi-br-trash"></i><p>Kho</p></a>
+    <a class="sidebar-button" id="update-profile"><i class="fi fi-br-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
+    <a href="/authentication/sign-in" class="sidebar-button" id="log-out"><i class="fi fi-br-exit"></i><p>Đăng Xuất</p></a>
   </div>
 </div>
 
@@ -65,26 +35,24 @@
   var updateProfileButton = document.querySelector('a#update-profile')
   var logOutButton        = document.querySelector('a#log-out')
 
-  var index = `{{index}}`
-  if (index === 'home'          ) homeButton.style.backgroundColor          = '#FFDFDF'
-  if (index === 'customers'     ) customersButton.style.backgroundColor     = '#FFDFDF'
-  if (index === 'orders'        ) ordersButton.style.backgroundColor        = '#FFDFDF'
-  if (index === 'stores'        ) storeButton.style.backgroundColor         = '#FFDFDF'
-  if (index === 'employees'     ) employeesButton.style.backgroundColor     = '#FFDFDF'
-  if (index === 'products'      ) productsButton.style.backgroundColor      = '#FFDFDF'
-  if (index === 'brands'        ) brandsButton.style.backgroundColor        = '#FFDFDF'
-  if (index === 'trash'         ) trashButton.style.backgroundColor         = '#FFDFDF'
-  if (index === 'update-profile') updateProfileButton.style.backgroundColor = '#FFDFDF'
+  var index = `{{index}}`;
+  const buttonMap = {
+    home: homeButton,
+    customers: customersButton,
+    orders: ordersButton,
+    stores: storeButton,
+    employees: employeesButton,
+    products: productsButton,
+    brands: brandsButton,
+    trash: trashButton,
+    "update-profile": updateProfileButton,
+  };
+  if (buttonMap[index]) buttonMap[index].style.backgroundColor = '#FFDFDF';
 
-  if (currentTime <= 9) {
-    checkDay = 'buổi sáng'
-  } else if (currentTime <= 14) {
-    checkDay = 'buổi trưa'
-  } else if (currentTime <= 18) {
-    checkDay = 'buổi chiều'
-  } else {
-    checkDay = 'buổi tối'
-  }
+  if (currentTime <= 9) checkDay = 'buổi sáng'
+  else if (currentTime <= 14) checkDay = 'buổi trưa'
+  else if (currentTime <= 18) checkDay = 'buổi chiều'
+  else checkDay = 'buổi tối'
 
   var helloText = `Chúc bạn một ${checkDay} vui vẻ !!!`
   document.getElementById('welcome-text').innerHTML = helloText
