--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -19,154 +19,78 @@
     <ul>
       <li>
         <span>
-          <a href="/all-products/skincare">
-            Skincare
-          </a>
+          <a href="/all-products/skincare">Skincare</a>
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
         </span>
         <ul>
             <li>
-              <a href="/all-products/skincare/xit-khoang">
-                Xịt khoáng
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079975/web-img/mhseyytpn8h6zvg4tabd_r57wfv.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/xit-khoang">Xịt khoáng<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079975/web-img/mhseyytpn8h6zvg4tabd_r57wfv.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/mat-na">
-                Mặt nạ
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079978/web-img/sfudjh00pykqpvav4sgy_xqbzev.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/mat-na">Mặt nạ<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079978/web-img/sfudjh00pykqpvav4sgy_xqbzev.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/serum">
-                Serum
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079970/web-img/kjz3zdlyxo76h1p3t6lm_uk4agl.webp" alt="loading" loading="lazy">
-            </a>
+              <a href="/all-products/skincare/serum">Serum<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079970/web-img/kjz3zdlyxo76h1p3t6lm_uk4agl.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/bha">
-                BHA
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730814300/web-img/dfw5hkqs9gww8tzb6q94_amc5t1.webp" alt="loading" loading="lazy">
-            </a>
+              <a href="/all-products/skincare/bha">BHA<img src="https://res.cloudinary.com/bunny-store/image/upload/v1730814300/web-img/dfw5hkqs9gww8tzb6q94_amc5t1.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/tay-da-chet">
-                Tẩy da chết
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079964/web-img/ettmlmf7s4x0g8d98nvq_vklnps.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/tay-da-chet">Tẩy da chết<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079964/web-img/ettmlmf7s4x0g8d98nvq_vklnps.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/duong-da">
-                Dưỡng da
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079987/web-img/xkkpidyegeiesbea9rk5_b4tgej.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/duong-da">Dưỡng da<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079987/web-img/xkkpidyegeiesbea9rk5_b4tgej.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/toner">
-                Toner
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079967/web-img/k0easo5upkoydszse1i3_jp7mrg.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/toner">Toner<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079967/web-img/k0easo5upkoydszse1i3_jp7mrg.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/nuoc-tay-trang">
-                Nước tẩy trang
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079972/web-img/md2husxtaoo5kmyp6qxy_cmvvnp.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079972/web-img/md2husxtaoo5kmyp6qxy_cmvvnp.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/cham-mun">
-                Chấm mụn
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079961/web-img/almfjrziupsfnxh4ikej_hfcib1.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/cham-mun">Chấm mụn<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079961/web-img/almfjrziupsfnxh4ikej_hfcib1.webp" alt="loading" loading="lazy"></a>
             </li>
-            
             <li>
-              <a href="/all-products/skincare/kem-duong-am">
-                Kem dưỡng ẩm
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079981/web-img/sznuvy878jkx6irn87wt_molje8.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079981/web-img/sznuvy878jkx6irn87wt_molje8.webp" alt="loading" loading="lazy"></a>
             </li>
-
             <li>
-              <a href="/all-products/skincare/sua-rua-mat">
-                Sữa rửa mặt
-                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079959/web-img/zeuznbkrsspuucipy2bh_akixfj.webp" alt="loading" loading="lazy">
-              </a>
+              <a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079959/web-img/zeuznbkrsspuucipy2bh_akixfj.webp" alt="loading" loading="lazy"></a>
             </li>
         </ul>
       </li>
       <li>
         <span>
-          <a href="/all-products/makeup">
-            Makeup
-          </a>
+          <a href="/all-products/makeup">Makeup</a>
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
         </span>
         <ul>
           <li>
-            <a href="/all-products/makeup/phan-ma">
-              Phấn má
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080154/web-img/o1th0fymd3gzjzgwbrbz_ghkt70.webp" alt="loading" loading="lazy">
-            </a>
+            <a href="/all-products/makeup/phan-ma">Phấn má<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080154/web-img/o1th0fymd3gzjzgwbrbz_ghkt70.webp" alt="loading" loading="lazy"></a>
           </li>
           <li>
-            <a href="/all-products/makeup/mascara">
-              Mascara
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080143/web-img/ejschlqugyhr4asayspm_hbrdiy.webp" alt="loading" loading="lazy">
-            </a>
+            <a href="/all-products/makeup/mascara">Mascara<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080143/web-img/ejschlqugyhr4asayspm_hbrdiy.webp" alt="loading" loading="lazy"></a>
           </li>
           <li>
-            <a href="/all-products/makeup/ke-mat">
-              Kẻ mắt
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080172/web-img/djy7wut0chooynp65hov_xxbwxi.webp" alt="loading" loading="lazy">
-            </a>
+            <a href="/all-products/makeup/ke-mat">Kẻ mắt<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080172/web-img/djy7wut0chooynp65hov_xxbwxi.webp" alt="loading" loading="lazy"></a>
           </li>
           <li>
-            <a href="/all-products/makeup/kem-chong-nang">
-              Kem chống nắng
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080150/web-img/hspzixrzay9whcg51meo_h4iotk.webp" alt="loading" loading="lazy">
-            </a>
+            <a href="/all-products/makeup/kem-chong-nang">Kem chống nắng<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080150/web-img/hspzixrzay9whcg51meo_h4iotk.webp" alt="loading" loading="lazy"></a>
           </li>
           <li>
-            <a href="/all-products/makeup/che-khuyet-diem" loading="lazy">
-              Che khuyết điểm
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080188/web-img/vr3yzblr5g0crzkgj9po_e8mrjp.webp" alt="loading" loading="lazy">
-            </a>
+            <a href="/all-products/makeup/che-khuyet-diem" loading="lazy">Che khuyết điểm<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080188/web-img/vr3yzblr5g0crzkgj9po_e8mrjp.webp" alt="loading" loading="lazy"></a>
           </li>
           <li>
-            <a href="/all-products/makeup/son">
-              Son
-              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080146/web-img/jd2llxirfbwpdwekk7lz_cpznu5.webp" alt="loading" loading="lazy">
-            </a>
+            <a href="/all-products/makeup/son">Son<img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080146/web-img/jd2llxirfbwpdwekk7lz_cpznu5.webp" alt="loading" loading="lazy"></a>
           </li>
         </ul>
       </li>
     </ul>
   </div>
 
-  <div class="title">
-    <a href="/introduce">GIỚI THIỆU</a>
-  </div>
-
-  <div class="title">
-    <a href="/all-products/new-arrival">HÀNG MỚI VỀ</a>
-  </div>
-
-  <div class="title">
-    <a href="/all-orders/checking">ĐƠN HÀNG</a>
-  </div>
-
-  <div class="title">
-    <i class="fi fi-br-search" ></i>
-  </div>
+  <div class="title"><a href="/introduce">GIỚI THIỆU</a></div>
+  <div class="title"><a href="/all-products/new-arrival">HÀNG MỚI VỀ</a></div>
+  <div class="title"><a href="/all-orders/checking">ĐƠN HÀNG</a></div>
+  <div class="title"><i class="fi fi-br-search" ></i></div>
 </div>
 
 <div class="header-button">
@@ -174,7 +98,6 @@
     <span class="orders-quantity"></span>    
     <i class="fi fi-rr-shopping-cart-add"></i>
   </a>
-
   <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" class="dropdown-avatar" alt="loading"/>
 </div>
 
@@ -225,11 +148,8 @@
   getAvatarMenu.style.display = 'none'
 
   getAvatar.onclick = function() {
-    if (getAvatarMenu.style.display === 'none') {
-      getAvatarMenu.style.display = 'block'
-    } else {
-      getAvatarMenu.style.display = 'none'
-    }
+    if (getAvatarMenu.style.display === 'none') getAvatarMenu.style.display = 'block'
+    else getAvatarMenu.style.display = 'none'
   }
 
   document.addEventListener('click', function(event) {
@@ -291,11 +211,8 @@
   var width = window.innerWidth
 
   function setDisplay(width, menu) {
-    if (width < 700) {
-      menu.style.display = 'none'
-    } else {
-      menu.style.display = 'flex'
-    }
+    if (width < 700) menu.style.display = 'none'
+    else menu.style.display = 'flex'
   }
   setDisplay(width, menu)
 
@@ -305,11 +222,7 @@
   });
 
   responsiveMenu.onclick = function() {
-    if (menu.style.display === 'none') {
-      menu.style.display = 'flex'
-    } else {
-      menu.style.display = 'none'
-    }
+    if (menu.style.display === 'none') menu.style.display = 'flex' 
+    else menu.style.display = 'none'
   }
-
 </script>
