--- a/src/resource/views/partials/userFooter.hbs
+++ b/src/resource/views/partials/userFooter.hbs
@@ -22,28 +22,34 @@
     </ul>
   </p>
 
-  <a href="/all-products/skincare">Skincare</a>
-  <ul>
-    <li><a href="/all-products/skincare/xit-khoang">Xịt khoáng</a></li>
-    <li><a href="/all-products/skincare/mat-na">Mặt nạ</a></li>
-    <li><a href="/all-products/skincare/serum">Serum</a></li>
-    <li><a href="/all-products/skincare/bha">BHA</a></li>
-    <li><a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a></li>
-    <li><a href="/all-products/skincare/duong-da">Dưỡng da</a></li>
-    <li><a href="/all-products/skincare/toner">Toner</a></li>
-    <li><a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a></li>
-    <li><a href="/all-products/skincare/cham-mun">Chấm mụn</a></li>
-    <li><a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a></li>
-    <li><a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a></li>
-  </ul>
+  <div class="list">
+    <div>
+      <a href="/all-products/skincare">Skincare</a>
+      <ul>
+        <li><a href="/all-products/skincare/xit-khoang">Xịt khoáng</a></li>
+        <li><a href="/all-products/skincare/mat-na">Mặt nạ</a></li>
+        <li><a href="/all-products/skincare/serum">Serum</a></li>
+        <li><a href="/all-products/skincare/bha">BHA</a></li>
+        <li><a href="/all-products/skincare/tay-da-chet">Tẩy da chết</a></li>
+        <li><a href="/all-products/skincare/duong-da">Dưỡng da</a></li>
+        <li><a href="/all-products/skincare/toner">Toner</a></li>
+        <li><a href="/all-products/skincare/nuoc-tay-trang">Nước tẩy trang</a></li>
+        <li><a href="/all-products/skincare/cham-mun">Chấm mụn</a></li>
+        <li><a href="/all-products/skincare/kem-duong-am">Kem dưỡng ẩm</a></li>
+        <li><a href="/all-products/skincare/sua-rua-mat">Sữa rửa mặt</a></li>
+      </ul> 
+    </div>
 
-  <a href="/all-products/makeup">Makeup</a>
-  <ul>
-    <li><a href="/all-products/makeup/phan-ma">Phấn má</a></li>
-    <li><a href="/all-products/makeup/mascara">Mascara</a></li>
-    <li><a href="/all-products/makeup/ke-mat">Kẻ mắt</a></li>
-    <li><a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a></li>
-    <li><a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a></li>
-    <li><a href="/all-products/makeup/son">Son</a></li>
-  </ul>
+    <div>
+      <a href="/all-products/makeup">Makeup</a>
+      <ul>
+        <li><a href="/all-products/makeup/phan-ma">Phấn má</a></li>
+        <li><a href="/all-products/makeup/mascara">Mascara</a></li>
+        <li><a href="/all-products/makeup/ke-mat">Kẻ mắt</a></li>
+        <li><a href="/all-products/makeup/kem-chong-nang">Kem chống nắng</a></li>
+        <li><a href="/all-products/makeup/che-khuyet-diem">Che khuyết điểm</a></li>
+        <li><a href="/all-products/makeup/son">Son</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
