--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -12,7 +12,7 @@
         <tbody>
           <tr>
             <td>Số lượng đơn hàng</td>
-            <td>{{allOrders}}</td>
+            <td>{{orderLength}}</td>
             <td><a href="/admin/all-orders">Chi tiết</a></td>
           </tr>
           <tr>
@@ -46,7 +46,7 @@
         <tbody>
           <tr>
             <td>Số lượng sản phẩm</td>
-            <td>{{allProducts}}</td>
+            <td>{{productLength}}</td>
             <td><a href="/admin/all-products/?page=&type=">Chi tiết</a></td>
           </tr>
           <tr>
@@ -104,7 +104,7 @@
         <tbody>
           <tr>
             <td>Số lượng khách hàng</td>
-            <td>{{allOrders}}</td>
+            <td>{{customerLength}}</td>
             <td><a href="/admin/all-customers">Chi tiết</a></td>
           </tr>
           <tr>
@@ -128,7 +128,7 @@
         <tbody>
           <tr>
             <td>Số lượng cửa hàng</td>
-            <td>{{allOrders}}</td>
+            <td>{{storeLength}}</td>
             <td><a href="/admin/all-stores">Chi tiết</a></td>
           </tr>
           <tr>
@@ -152,7 +152,7 @@
         <tbody>
           <tr>
             <td>Số lượng nhân sự</td>
-            <td>{{totalEmployee}}</td>
+            <td>{{employeeLength}}</td>
             <td><a href="/admin/all-employees">Chi tiết</a></td>
           </tr>
           <tr>
