--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,4 +1,8 @@
 <div class="admin-sidebar-container">
+  <button class="resize-button">
+    <i class="fi fi-br-bars-sort"></i>
+  </button>
+
   <div class="admin-account">
     {{!-- <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070717/web-img/admin_xernxj.webp" alt="avatar" loading="lazy"/> --}}
     <div style="padding-left: 10px;">
@@ -34,7 +38,6 @@
   var trashButton         = document.querySelector('a#trash')
   var updateProfileButton = document.querySelector('a#update-profile')
   var logOutButton        = document.querySelector('a#log-out')
-
   var index = `{{index}}`;
   const buttonMap = {
     home: homeButton,
@@ -49,10 +52,10 @@
   };
   if (buttonMap[index]) buttonMap[index].style.backgroundColor = '#FFDFDF';
 
-  if (currentTime <= 9) checkDay = 'buổi sáng'
+  if      (currentTime <= 9) checkDay = 'buổi sáng'
   else if (currentTime <= 14) checkDay = 'buổi trưa'
   else if (currentTime <= 18) checkDay = 'buổi chiều'
-  else checkDay = 'buổi tối'
+  else    checkDay = 'buổi tối'
 
   var helloText = `Chúc bạn một ${checkDay} vui vẻ !!!`
   document.getElementById('welcome-text').innerHTML = helloText
@@ -63,12 +66,8 @@
     var ca = decodedCookie.split(';');
     for(var i = 0; i < ca.length; i++) {
       var c = ca[i];
-      while (c.charAt(0) == ' ') {
-        c = c.substring(1);
-      }
-      if (c.indexOf(name) == 0) {
-        return c.substring(name.length, c.length);
-      }
+      while (c.charAt(0) == ' ') { c = c.substring(1) }
+      if (c.indexOf(name) == 0) {return c.substring(name.length, c.length)}
     }
     return "";
   }
