--- a/src/public/css/user/userBody.css
+++ b/src/public/css/user/userBody.css
@@ -13,25 +13,15 @@ body {
   background-color: #2d3436;
   color: #D1A6A6;
 }
-::-webkit-scrollbar {
-  width: 10px;
-}
-::-webkit-scrollbar-track {
-  background: #FFDFDF; 
-}
-::-webkit-scrollbar-thumb {
-  background: #D1A6A6;
-  border-radius: 5px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: #D1A6A6;
-}
+::-webkit-scrollbar {width: 10px}
+::-webkit-scrollbar-track {background: #FFDFDF}
+::-webkit-scrollbar-thumb {background: #D1A6A6;border-radius: 5px}
+::-webkit-scrollbar-thumb:hover {background: #D1A6A6}
 .dropup {
-  position: relative;
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
-  bottom: 5px;
+  bottom: 60px;
   right: 5px;
   position: fixed;
   i { font-size: 50px; background-color: transparent };
@@ -53,6 +43,102 @@ body {
 }
 .dropup:hover .dropup-content {
   display: block;
+}
+.chat-icon {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: 0;
+  bottom: 5px;
+  right: 5px;
+  position: fixed;
+  cursor: pointer;
+  i { font-size: 50px; background-color: transparent };
+}
+.chat-box {
+  background-color: white;
+  width: 300px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: 0;
+  bottom: 5px;
+  right: 60px;
+  border-radius: 10px;
+  position: fixed;
+  .chat-header {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    top: 0;
+    height: 50px;
+    background-color: #D1A6A6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    .minimize {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 5px;
+    }
+    .minimize:hover {background-color: #ffffff19}
+  }
+  .chat-body, .not-logged-in {
+    height: 350px;
+  }
+  .not-logged-in {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .chat-content {
+    height: 300px;
+    display: flex;
+    overflow-y: scroll;
+    ul {
+      box-sizing: border-box;
+      width: 50%;
+      height: 100%;
+      margin-block-start: 0px;
+      margin-block-end: 0px;
+      padding-inline-start: 0px;
+      padding: 10px;
+    }
+  }
+  .input {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
+    gap: 5px;
+    input {
+      width: 80%;
+      height: 40px;
+      padding: 0 5px;
+      border-radius: 10px;
+      border: 1px solid #D1A6A6;
+    }
+    input:focus {
+      outline: 1px solid #D1A6A6;
+    }
+    .send-btn {
+      width: 20%;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #D1A6A6;
+      border-radius: 10px;
+      color: white;
+      cursor: pointer;
+    }
+    .send-btn.not-allowed {
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
+  }
 }
 .preloader {
   position: fixed;
