--- a/src/resource/views/admin/allStores.hbs
+++ b/src/resource/views/admin/allStores.hbs
@@ -7,46 +7,26 @@
     <table style="width:100%">
       <thead>
         <tr>
-          <td>
-            STT
-          </td>
-          <td>
-            Mã cửa hàng
-          </td>
-          <td>
-            Tên cửa hàng
-          </td>
-          <td>
-            Địa chỉ
-          </td>
-          <td>
-            Tổng doanh thu
-          </td>
+          <td>STT</td>
+          <td>Mã cửa hàng</td>
+          <td>Tên cửa hàng</td>
+          <td>Địa chỉ</td>
+          <td>Tổng doanh thu</td>
           <td>
           </td>
         </tr>
       </thead>
 
       <tbody>
-        {{#each store}}
+        {{#each stores}}
         <tr>
+          <td>{{addIndex @index 1}}</td>
+          <td>{{this._id}}</td>
+          <td>{{this.name}}</td>
+          <td>{{this.address}}</td>
+          <td class="revenue">{{this.revenue}}</td>
           <td>
-            {{addIndex @index 1}}
-          </td>
-          <td>
-            {{this._id}}
-          </td>
-          <td>
-            {{this.name}}
-          </td>
-          <td>
-            {{this.address}}
-          </td>
-          <td>
-            {{this.totalPrice}}
-          </td>
-          <td>
-            <a href="/admin">Chi Tiết</a>
+            <a href="/admin/all-stores/store/{{this._id}}">Chi Tiết</a>
           </td>
         </tr>
         {{/each}}
@@ -59,42 +39,6 @@
 </div>
 
 <script>
-  // pagination 
-  var pagination = document.querySelector('span.pagination')
-  var productLength = `{{orderLength}}`
-  var currentPage = 1
-
-  // díplay all pages tag
-  for (let i = 0; i < productLength; i += 10) {
-    var newPage = document.createElement('a')
-    newPage.setAttribute('href', `/admin/all-orders?page=${currentPage}&type={{orderType}}`)
-    newPage.innerText = `${currentPage}`
-    pagination.appendChild(newPage)
-    currentPage++
-  }
-
-  // Style the current selected page
-  var allPagesTag = pagination.querySelectorAll('a')
-  for (let i = 0; i < allPagesTag.length; ++i) {
-    if (allPagesTag[i].innerText === `{{currentPage}}`) {
-      allPagesTag[i].style.borderColor = '#D1A6A6'
-      allPagesTag[i].style.backgroundColor = '#D1A6A6'
-      allPagesTag[i].style.color = 'white'
-      allPagesTag[i].style.width = '25px'
-      allPagesTag[i].style.height = '25px'
-    }
-  }
-
-  let selectButton = document.querySelector('select')
-  selectButton.onchange = function () {
-    location = `/admin/all-orders?page={{currentPage}}&type=${this.value}`
-  }
-
-  let selectButtonOptions = selectButton.querySelectorAll('option')
-
-  selectButtonOptions.forEach(option => {
-    if (option.value === `{{orderType}}`) {
-      option.setAttribute('selected', 'selected')
-    }
-  })
+  revenue = document.querySelectorAll('td.revenue')
+  revenue.forEach((price) => {price.innerText = price.innerText.replace(/\B(?=(\d{3})+(?!\d))/g, '.') + ' VND'})
 </script>
