--- a/src/resource/views/admin/store.hbs
+++ b/src/resource/views/admin/store.hbs
@@ -1,4 +1,4 @@
-<div class="order-details-container">
+<div class="store-details-container">
   <form method="POST" action="/admin/order-updated/{{order._id}}?_method=PUT">
     <table id="table-1">
       <thead>
@@ -8,7 +8,7 @@
       </thead>
       <tr>
         <td> Mã Đơn </td>
-        <td> {{order._id}} </td>
+        <td> {{store.name}} </td>
       </tr>
       <tr>
         <td> Ngày Đặt </td>
