--- a/src/public/css/admin/adminStore.css
+++ b/src/public/css/admin/adminStore.css
@@ -1,10 +1,13 @@
-.customer-details-container {
+.store-details-container {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 10px;
+  form {
+    width: 100%;
+  }
   table {
     width: 100%;
     border-spacing: 0px 10px;
