--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -8,15 +8,18 @@
   <link rel="stylesheet" href="/css/admin/adminAllCustomers.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminAllOrders.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminAllProducts.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminAllStores.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/adminBody.css">
+  <link rel="stylesheet" href="/css/admin/adminCreateCustomer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminCreateProduct.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminCustomer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminHome.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminOrder.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminSidebar.css">
+  <link rel="stylesheet" href="/css/admin/adminStore.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminTrashProducts.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminUpdateProduct.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/adminUpdateProfile.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/adminBody.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
