--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -15,10 +15,10 @@
     <a href="/admin/all-customers" class="sidebar-button" id="customers"><i class="fi fi-rr-users"></i><p>Khách hàng</p></a>
     <a href="/admin/all-purchases" class="sidebar-button" id="purchases"><i class="fi fi-sr-file-import"></i><p>Nhập hàng</p></a>
     <a href="/admin/all-orders" class="sidebar-button" id="orders"><i class="fi fi-rr-piggy-bank"></i><p>Đơn Hàng</p></a>
-    <a href="/admin/all-stores" class="sidebar-button" id="stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng (Đang làm)</p></a>
-    <a href="/admin/all-stores" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự (Đang làm)</p></a>
+    <a href="/admin/all-stores" class="sidebar-button" id="stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng</p></a>
+    <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự</p></a>
     <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
-    <a href="/admin/all-brands" class="sidebar-button" id="total-brands"><i class="fi fi-rr-box-open"></i><p>Đối tác (Đang làm)</p></a>
+    <a href="/admin/all-brands" class="sidebar-button" id="total-brands"><i class="fi fi-rr-box-open"></i><p>Đối tác</p></a>
     <a href="/admin/trash" class="sidebar-button" id="trash"><i class="fi fi-br-trash"></i><p>Kho</p></a>
     <a class="sidebar-button" id="update-profile"><i class="fi fi-br-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/authentication/sign-in" class="sidebar-button" id="log-out"><i class="fi fi-br-exit"></i><p>Đăng Xuất</p></a>
