--- a/src/resource/views/admin/allCustomers.hbs
+++ b/src/resource/views/admin/allCustomers.hbs
@@ -10,7 +10,7 @@
       <option value=""></option>
     </select>
 
-    <a href="/admin/create/customer" class="create-customer" id="create-customer">
+    <a href="/admin/all-customers/customer/create" class="create-customer" id="create-customer">
       <i class="fi fi-rr-user-add"></i>
       <p>Thêm Khách hàng</p>
     </a>
