--- a/src/resource/views/admin/createCustomer.hbs
+++ b/src/resource/views/admin/createCustomer.hbs
@@ -1,5 +1,5 @@
 <div class="admin-create-product-container">
-  <form id="form-1" method="post" action="/admin/customer/created" enctype="multipart/form-data">
+  <form id="form-1" method="post" action="/admin/all-customers/customer/created" enctype="multipart/form-data">
     <div class="form-title">
       <p>Thêm khách hàng mới</p>
     </div>
