--- a/src/resource/views/admin/order.hbs
+++ b/src/resource/views/admin/order.hbs
@@ -1,5 +1,5 @@
 <div class="order-details-container">
-  <form method="POST" action="/admin/order-updated/{{order._id}}?_method=PUT">
+  <form method="POST" action="/admin/all-orders/order-updated/{{order._id}}?_method=PUT">
     <table id="table-1">
       <thead>
         <tr>
