--- a/src/resource/views/admin/product.hbs
+++ b/src/resource/views/admin/product.hbs
@@ -1,5 +1,5 @@
 <div class="admin-update-product-container">
-  <form method="POST" action="/admin/updated/{{product._id}}?_method=PUT" enctype="multipart/form-data">
+  <form method="POST" action="/admin/all-products/product/updated/{{product._id}}?_method=PUT" enctype="multipart/form-data">
     <div class="form-title">
       <p>Thông tin sản phẩm</p>
     </div>
