--- a/src/resource/views/admin/profile.hbs
+++ b/src/resource/views/admin/profile.hbs
@@ -3,7 +3,7 @@
     <p>Sửa Thông Tin Cá Nhân</p>
   </div>
 
-  <form class="admin-update-form" method="POST" action="/admin/profile-updated/{{user._id}}?_method=PUT">
+  <form class="admin-update-form" method="POST" action="/admin/profile/profile-updated/{{user._id}}?_method=PUT">
 
     <div class="form-group">
       <label for="name">Tên Quản Trị Viên</label>
