--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -182,7 +182,7 @@
   if (token) {
     var updateProfileButton = document.createElement('a')
     updateProfileButton.innerText = 'Thông tin cá nhân'
-    updateProfileButton.setAttribute('href', `/profile/update/${user_id}`)
+    updateProfileButton.setAttribute('href', `/profile/${user_id}`)
     getAvatarMenu.appendChild(updateProfileButton)
 
     var logOutButton = document.createElement('a')
