--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -19,7 +19,7 @@
     <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự</p></a>
     <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="total-products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
     <a href="/admin/all-brands" class="sidebar-button" id="total-brands"><i class="fi fi-rr-box-open"></i><p>Đối tác</p></a>
-    <a href="/admin/trash" class="sidebar-button" id="trash"><i class="fi fi-br-trash"></i><p>Kho</p></a>
+    <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-br-trash"></i><p>Kho</p></a>
     <a class="sidebar-button" id="update-profile"><i class="fi fi-br-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/authentication/sign-in" class="sidebar-button" id="log-out"><i class="fi fi-br-exit"></i><p>Đăng Xuất</p></a>
   </div>
@@ -75,7 +75,7 @@
   }
 
   var adminId = getCookie('user_id') 
-  updateProfileButton.setAttribute('href', `/admin/update-profile/${adminId}`)
+  updateProfileButton.setAttribute('href', `/admin/profile/${adminId}`)
 
   // log-out
   logOutButton.onclick = function() {
