--- a/src/resource/views/users/profile.hbs
+++ b/src/resource/views/users/profile.hbs
@@ -224,7 +224,7 @@
             {{this.status}}
           </td>
           <td>
-            <a href="/order/{{this._id}}">Chi Tiết</a>
+            <a href="/all-orders/order/{{this._id}}">Chi Tiết</a>
           </td>
         </tr>
         {{/each}}
